# s3-compare-action

./: .pre-commit-config.yaml  Dockerfile  README.md  action.yaml  pyproject.toml  s3-compare-action.py
