[tool.poetry]
name = "s3-compare-action"
version = "0.1.0"
description = "Compare differences between S3 and Github repo/local directory"
authors = ["Alexandros Orfanos <github@aorfanos.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.96"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
